package simulateur;

public class Module extends Composant {
	public Module(int nbEntrees, int nbSorties) {
		super(nbEntrees, nbSorties);
	}

	@Override
	public void calculer() {}
}
